[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Unit/MagFire.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Stickman.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Damage/DamageAreaRange.gd" type="Script" id=3]
[ext_resource path="res://Assets/units2/human/red-mage.png" type="Texture" id=4]
[ext_resource path="res://Sprites/action_active.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 360.734

[node name="MagFire" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="DamageNPC" type="Area2D" parent="." index="0"]
script = ExtResource( 3 )

[node name="Area" type="CollisionShape2D" parent="DamageNPC" index="0"]
visible = false
position = Vector2( 83, 84 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="DamageNPC" index="1"]
visible = false
position = Vector2( -252, -250 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
centered = false

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 99, 106.646 )

[node name="Sprite" type="Sprite" parent="." index="2"]
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
centered = false

[node name="HP_bar" parent="." index="3"]
margin_left = 34.0
margin_top = -2.0
margin_right = 166.0
margin_bottom = 13.0
max_value = 2000.0
value = 2000.0

[node name="TimerAttack" type="Timer" parent="." index="4"]

[node name="TimerHide" type="Timer" parent="." index="5"]

[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
[connection signal="timeout" from="TimerHide" to="." method="_on_TimerHide_timeout"]
